--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js"
   },
+  "nodemonConfig": {
+      "ignore": ["*.json"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sankalpgambhir/sakamoto.git"
